# theater-auth-service

./: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: Dockerfile  Dockerfile.test  entrypoint-test.sh  entrypoint.sh  main.py
src/api/v1/: __init__.py  auth.py  inspection.py  login.py  logout.py  personal.py  profile.py  user.py
src/core/: config.py  enums.py
src/db/: db.py  postgres.py
src/db/migrations/: env.py
src/db/migrations/versions/: 01_initial_db_74cce5c36550.py  02_add_role_to_user_75fceeff2717.py  03_add_login_history_f7751ffad0be.py
src/dependencies/: auth.py
src/exceptions/: __init__.py  auth_exceptions.py  base.py  user_exceptions.py
src/models/: __init__.py  entity.py  user.py
src/repositories/: base.py  cache.py  login_history.py  user.py
src/schemas/: entity.py  inspect.py  jwt.py  login_history.py  user.py
src/services/: auth.py  base.py  jwt_service.py  login_history.py  roles.py  session_service.py  token_service.py  user.py
src/tests/: conftest.py  test_auth.py  test_user.py
src/tools/: create_admin.py  postgres.py
