[project]
name = "theater-auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "async-fastapi-jwt-auth>=0.6.6",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "orjson>=3.10.12",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "typer>=0.15.1",
    "werkzeug>=3.1.3",
]
